<resources>
    <string name="app_name">Płeć mózgu</string>

    <string name="empty" />
    <string name="next_question">Następne pytanie</string>

    <string name="choose_gender_female">Kobietą</string>
    <string name="choose_gender_male">Mężyczną</string>
    <string name="choose_gender_title">Jestem:</string>
    <string name="share">Udostępnij swój wynik</string>
    <string name="start_test">Rozpocznij Test</string>
    <string name="test_rules">Test ma na celu wykazanie płci, męskości lub kobiecości, wzorców twojego mózgu. Nie ma złych ani dobrych odpowiedzi. Rezultat to po prostu wskazówka co do poziomu męskiego hormonu, który twój mózg otrzymał między szóstym, a ósmym tygodniem od poczęcia. To miało i ma wpływ na twoje wybory: wartości, zachowanie, styl, orientację i preferencje. Zakreśl zdanie, które uznasz za najbardziej prawdziwe, jeżeli nie pasuje żadna odpowiedź to przejdź do kolejnego pytania bez zaznaczania żadnej odpowiedzi.</string>
    <string name="return_to_menu">Powrót do menu</string>

    <string name="symbol_male">M</string>
    <string name="symbol_female">K</string>

    <string name="points_min_gender">-150</string>
    <string name="points_max_gender">450</string>
</resources>