<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/screen_spacing">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/choose_gender_title" />

    <Button
        android:id="@+id/button_male"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_gender_male" />

    <Button
        android:id="@+id/button_female"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_gender_female" />

</LinearLayout>