<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/screen_spacing">

    <ImageView
        android:layout_width="@dimen/main_menu_logo_size"
        android:layout_height="@dimen/main_menu_logo_size"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_brain" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="24dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/test_rules"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_start_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/start_test"
        app:icon="@drawable/ic_play" />

</LinearLayout>